# Wasatch.PY

./: .example_pypirc  .flake8  .gitignore  .pylintrc  CHANGELOG.md  Doxyfile  LICENSE  MANIFEST.in  Makefile  README-RPI.md  README.md  README_CHANGELOG.md  README_PYPI.md  README_RPI.md  README_SETTINGS.md  README_VIRTUAL.md  demo-auto-raman.py  demo-ids-raman.py  demo-simple.py  demo-virtual.py  demo-workflow.py  demo.py  pyproject.toml  requirements.txt  setup.cfg  shell.py  win10environment.yml
WasatchShell/: README.md  laser-test.py  load-test.py  load-test.tcl  one-shot.py  script-long.py  script-short.py  wasatch-shell.py  wasatch.py
WasatchShell/archive/: load-test.tcl
environments/: conda-linux.yml  conda-macos.yml  conda-rpi.yml  conda-win10.yml
scripts/: dark-vs-integ.py  deploy
src/wasatch/: BalanceAcquisition.py  ControlObject.py  DeviceID.py  FeatureIdentificationDevice.py  HardwareInfo.py  SpectrometerState.py  WasatchBus.py  __init__.py
test/: queues.py
testSpectrometers/SiG_785/eeprom/: EEPROM-EM-9c65d19f4c.json
testSpectrometers/SiG_785/readings/: enlighten-20210329-094722-799520-WP-00686.csv  enlighten-20210329-094755-288958-WP-00686.csv
testSpectrometers/WP-00887/eeprom/: WP-00887-mock.json
testSpectrometers/WP-00904/eeprom/: WP-00904-mock.json
testSpectrometers/WP-00913/eeprom/: WP-00913-mock.json
tests/: existing_implementations.py  noise-by-setpoint.py  queues.py  unit.py
udev/: 10-wasatch.rules
wasatch/: AbstractUSBDevice.py  AndorDevice.py  AreaScanImage.py  AssemblyRevision.py  AutoRaman.py  AutoRamanRequest.py  BLEDevice.py  BalanceAcquisition.py  CSVLoader.py  CommandSettings.py  ControlObject.py  DetectorROI.py  DetectorRegions.py  DeviceFinderBLE.py  DeviceFinderTCP.py  DeviceFinderUSB.py  DeviceID.py  DeviceListFID.py  DeviceListSP.py  EEPROM.py  EEPROM_multical.sav  FPGAOptions.py  FeatureIdentificationDevice.py  FileSpectrometer.py  FirmwareRequirements.py  HardwareDetails.py  HardwareInfo.py  IDSCamera.py  IDSDevice.py  IMX385.py  InterfaceDevice.py  MockUSBDevice.py  OceanDevice.py  Overrides.py  PollStatus.py  ProcessedReading.py  ROI.py  Reading.py  RealUSBDevice.py  SPIDevice.py  (+22 more)
