[project]
name = "wasatch"
readme = "README.md"
version = "1.0.0"
dependencies = [
    "mkl",
    "numpy",
    "six",
    "psutil",
    "future",
    "pygtail",
    "pyusb",
    "requests",
    "pexpect",
    "seabreeze",
    "pyudev"
]

[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"
