[project]
name = "wasatch"
readme = "README.md"
version = "2.2.17"
dependencies = [
    "mkl",
    "numpy",
    "six",
    "psutil",
    "future",
    "pygtail",
    "pyusb",
    "requests",
    "pexpect",
    "seabreeze",
    "pyudev"
]

[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"

[tool.setuptools.packages.find]
where=["."]
include=["wasatch"]
exclude=[]
