[project]
name = "wasatch"
version = "2.3.8"
description= "Application-level driver for Wasatch Photonics spectrometers"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    #"mkl",
    "numpy",
    "six",
    "psutil",
    "future",
    "pygtail",
    "pyusb",
    "requests",
    "pexpect",
    "seabreeze",
    "pyudev",
    "pywin32; platform_system=='Windows'",
    "pyftdi",
    "crcmod",
    "bleak",
    "ids_peak; platform_system=='Windows'",
]

[project.urls]
Homepage = "https://github.com/WasatchPhotonics/wasatch.py"

[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"

[tool.setuptools.packages.find]
where=["."]
include=["wasatch"]
exclude=[]
