[metadata]
name = wasatch-YOUR-USERNAME-HERE
version = 0.0.1
author = Evan Dort
author_email = edort@wasatchphotonics.com
description = Python Driver for Wasatch Devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WasatchPhotonics/Wasatch.PY
project_urls =
    Bug Tracker = https://github.com/WasatchPhotonics/Wasatch.PY/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src